Fixed text alignment in welcome/index

--- a/webform/app/assets/stylesheets/style.css
+++ b/webform/app/assets/stylesheets/style.css
@@ -162,6 +162,11 @@ td, th {
 	margin-bottom: 2%;
 }
 
+
+.subtitle {
+	text-align: center;	
+}
+
 .main-content {
 	position: relative;
 }
